# finn

./: CMakeLists.txt  README.md
lib/googletest/: CMakeLists.txt  cmake_man.md
src/: log.cpp  log.h  main.cpp  stdafx.h
